--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+.app {
+  height: 100vh;
+  width: 100vw;
+  background-color: #dadbd4;
+  position: relative;
+  display: grid;
+  place-items: center;
+}
+.app__top {
+  width: 100%;
+  height: 17.5vh;
+  background-color: #00a884;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+}
+.app__container,
+.login {
+  height: 95vh;
+  width: 91vw;
+  background-color: #f8f9fa;
+  z-index: 10;
+  display: flex;
+  transition: all 0.25s linear;
+  box-shadow: 0 0 12px -2px rgba(0, 0, 0, 0.5);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.start{
+  height: 90vh;
+  width: 40vw;
+  background-color: #f8f9fa;
+  z-index: 10;
+  display: flex;
+  transition: all 0.25s linear;
+  box-shadow: 0 0 12px -2px rgba(0, 0, 0, 0.5);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+a {
+  text-decoration: none;
+  color: inherit;
+}
+@media screen and (min-width: 0px) and (max-width: 1440px) {
+  .app__container,
+  .start {
+    height: 100vh;
+    width: 100vw;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: #cccccc;
+}
+.main
+{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin: auto;
+  min-width: 30%;
+  min-height: 88%;
+  background-color: #f8f9fa;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
