--- a/src/components/Chat.css
+++ b/src/components/Chat.css
@@ -1,12 +1,19 @@
 .nav{
     background-color: #00a884;
+    
 }
 .content
 {
+    /* padding: 0 5rem ;
     min-height:77vh;
     border: 2px solid rgb(242, 238, 238);
     max-height: 72vh;
-    overflow-y:auto;
+    overflow-y:auto; */
+    height: calc(100% - 110px);
+    box-shadow: inset 0 10px 10px -10px #000000;
+    overflow-x: hidden;
+    padding: 0 16px;
+    margin-bottom: 5px;
   
 }
 .sendBox{
@@ -24,6 +31,7 @@
   display: flex;
   transition: all 0.25s linear;
   box-shadow: 0 0 12px -2px rgba(0, 0, 0, 0.5);
+
 }
 
 
@@ -35,29 +43,63 @@
 .prevMsg ,img{
     max-width: 25rem;
     max-height: 25rem;
+
 }
 
 .prevMsg{
+    font-size: 15px;
+    background: #fff;
+    border-radius: 0px 5px 5px 5px;
+    float: left;
+    margin: 2px;
     padding: 0.5rem;
     clear: both;
-    float: left;
-    border: 2px solid rgba(81, 162, 168, 0.881);
+    border: 2px solid rgba(176, 178, 178, 0.745);
     /* border: outset; */
-    border-radius:10px;
+    /* border-radius:10px; */
     border-right-width: thick;
-    background: #bee4bc;
+
     
 }
 
 .onTime{
-    border: 2px solid rgba(81, 162, 168, 0.881);
-    background: #bee4bc;
+    font-size: 15px;
+    margin: 2px;
+    border: 2px solid rgba(131, 194, 161, 0.812);
+    background: #e1ffc7;
     padding:.5rem;
     clear: both;
     float: right;
-    /* border: outset; */
-    border-radius:10px;
+
+    border-radius: 0px 5px 5px 5px;
     border-left-width: thick;
+}
+
+.rightTime
+{
+    color: rgb(84, 83, 83);
+    display: inline-block;
+    padding: 0 0 0 7px;
+    position: relative;
+    bottom: -10px;
+}
+
+/* .leftTime
+{
+    float: right;
+    color: rgb(84, 83, 83);
+    display: inline-block;
+    padding: 0 0 0 7px;
+    position: relative;
+    bottom: -10px;
+} */
+
+.onTime:first-child {
+    margin: 16px 0 8px;
+}
+
+.prevMsg:first-child {
+    margin: 16px 0 8px;
 }
 
 .input
@@ -74,4 +116,18 @@
     color:rgb(238, 247, 243);
     font-weight: 700;
     font-size: larger;
+}
+
+.send1
+{
+    display: flex;
+    align-content: center;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: row;
+}
+
+.send1,input{
+    color:gray;
+    font-size:10px
 }
