--- a/src/App.css
+++ b/src/App.css
@@ -69,12 +69,15 @@ a {
 }
 
 .heading{
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   display: flex;
   flex-direction: column;
   align-items: center;
   color:rgb(18, 153, 119);
   font-size: larger;
   text-decoration:underline;
-  font-weight: 700  ;
+  /* font-weight: 700  ; */
 }
+
+
 
